<resources>
    <string name="app_name">Bebedor da Rodada</string>
    <string name="share_round_screen">Compartilhar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bebedor da Rodada</string>
    <string name="nav_header_subtitle">Seja um vencedor!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tela Inicial</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="menu_create">Criar Rodada</string>
    <string name="menu_join">Entrar</string>
    <string name="menu_history">Histórico</string>


    <string name="intro_1_title">Divirta-se</string>
    <string name="intro_2_title">Bebidas</string>
    <string name="intro_3_title">Beba com moderação</string>

    <string name="intro_1_desc">Este app foi feito para você se divertir com os amigos</string>
    <string name="intro_2_desc">Temos um catálogo enorme de bebidas para pontuar. Aproveite</string>
    <string name="intro_3_desc">Por mais que seja uma competição. Não esqueça: beba com moderação.</string>


    <string name="dont_have_access">Essa é minha primeira vez!</string>
    <string name="have_access">Já possuo acesso</string>


    <string name="title_name">Olá, qual seu nome?</string>
    <string name="title_nickname">Qual seu apelido de bar?</string>
    <string name="title_email">Por último: Qual seu email?</string>

    <string name="next">SEGUINTE</string>

    <string name="title_message_insert_error">Calma, calma</string>
    <string name="message_insert_error">Para prosseguir você deve colocar um valor válido.</string>

    <string name="title_message_validation_email_error">Xiii...</string>
    <string name="message_validation_email_error">Para prosseguir você deve utilizar um e-mail válido.</string>

    <string name="title_message_email_error">Ops, você não tem acesso. Faça seu cadastro.</string>
    <string name="message_email_error">É bem rápido, não se preocupe.</string>

    <string name="waiting">Aguarde um momento, por favor.</string>

    <string name="title_create">Qual o nome dessa rodada?</string>
    <string name="description_create">E a descrição? Tem alguma regra? Diz ai.</string>

    <string name="create_round">#partiu. Criar rodada!</string>
    <string name="title_example_row_item_drinks">Bebida Catuaba</string>
    <string name="title_pont_example_row_item_drinks">125 pontos</string>
    <string name="title_content_example_row_item_drinks">álc. 24,5% vol.</string>


    <string name="btn_add_drink">ADD</string>
    <string name="btn_added_drink">Remover</string>
    <string name="title_list_create">Hora de escolher as bebidas que irão participar da rodada</string>

    <string name="title_share_round">Boa! Você acabou de criar uma rodada. Está na hora de convidar os amigos</string>
    <string name="description_share_round">Código da rodada</string>
    <string name="example_code">19533</string>

</resources>
