<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.catossi.bebedor_da_rodada.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create"
        android:name="br.com.catossi.bebedor_da_rodada.ui.create.CreateFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/nav_join"
        android:name="br.com.catossi.bebedor_da_rodada.ui.join.JoinFragment"
        android:label="@string/menu_join"
        tools:layout="@layout/fragment_join" />

    <fragment
        android:id="@+id/nav_history"
        android:name="br.com.catossi.bebedor_da_rodada.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />


</navigation>