<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareRoundActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/icon_beer"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/title_share_round"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/example_code"
            android:textSize="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/description_share_round"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@drawable/facebook_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <ImageView
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@drawable/whatsapp_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>