<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <TextView-->
<!--        android:id="@+id/text_create"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:paddingBottom="300dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_create"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_title"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_create"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:lines="4"
                android:maxLines="4"
                android:minLines="2"
                android:id="@+id/et_description"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/drinkList"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button

            android:id="@+id/btn_have_access"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/create_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>