<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_list"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_beer" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_marginBottom="10dp"
                    android:id="@+id/tv_title"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:textColor="@color/grey_dark_dark"
                    android:text="@string/title_example_row_item_drinks"
                    android:textSize="22dp"
                    android:textStyle="bold" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:textAlignment="center"
                        android:foregroundGravity="center"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/border_label"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/sectionSelected"
                        android:paddingRight="10dp"
                        android:text="@string/title_pont_example_row_item_drinks"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:foregroundGravity="center"
                        android:background="@drawable/border_label"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/title_content_example_row_item_drinks"
                        android:textColor="@color/sectionSelected"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

<!--            <View-->

<!--                android:layout_width="1dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:layout_marginTop="1dp"-->
<!--                android:background="@color/grey_dark" />-->

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:background="@drawable/border_image_button_add"
                android:padding="50dp"
                android:src="@drawable/ic_add_orange"
                android:textColor="@color/colorPrimaryDark" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>